--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "See who you follow and who follows you, see who don't follow you back too.",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && node out/index.js"
+    "test": "tsc && node out/index.js",
+    "start": "node out/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
   },
   "homepage": "https://github.com/jurgenjacobsen/instagramFollows#readme",
   "dependencies": {
-    "@types/express": "^4.17.17",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
