🐛 Some fixes to .gitignore and added Vercel build command

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "vercel": "npx tailwindcss -i ./src/assets/base.css -o ./src/assets/main.css && vite build",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
